# graffy

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
examples/: digraph.rs  graph.rs
src/: lib.rs
src/codegen/: formatter.rs  mod.rs  tests.rs
src/graph/: dft.rs  mod.rs
src/graph/graph/: mod.rs  tests.rs
src/graph/stable_graph/: dft.rs  mod.rs
src/graph/unstable_graph/: dft.rs  mod.rs  tests.rs
