[package]
name = "graffy"
version = "0.1.0"
edition = "2021"

license = "MIT or Apache-2.0"
description = "A graphing library that aims to be both simple to use and powerful."
readme = "README.md"
homepage = "https://github.com/lunir-project/graffy"
repository = "https://github.com/lunir-project/graffy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
